Fix width and white space for horizontal lines on statement page

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -183,6 +183,10 @@ img.pic.person-photo {
   text-align: right;
 }
 
+.answer-label {
+  border-bottom: 1px solid #999;
+}
+
 /******************************* comments *******************************/
 
 .comment {
